--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <option value="ar">العربية</option>
   </select>
 
+  <!-- 대분류 버튼 자리 -->
   <div id="mainMenu"></div>
 
   <div id="subMenu"></div>
@@ -73,6 +74,7 @@
   <p id="patientDisplay"></p>
 
   <script>
+    /* ---- 언어별 텍스트 정리 ---- */
     const menuText = {
       ko: {
         title: "🛎 간호사 호출",
@@ -189,13 +191,24 @@
     let currentLang = "ko";
     let currentTexts = menuText.ko;
 
+    /* ---- URL에서 환자번호 읽기 ---- */
     const urlParams = new URLSearchParams(window.location.search);
     const patientId = urlParams.get('id') || "등록번호 없음";
     document.getElementById('patientDisplay').innerText = `환자 등록번호: ${patientId}`;
 
+    /* ---- 대분류 버튼 렌더링 ---- */
     function renderMainMenu() {
       const mainMenu = document.getElementById("mainMenu");
       mainMenu.innerHTML = "";
+
+      const icons = {
+        "수액": "💉",
+        "침구/시트": "🛏",
+        "화장실": "🚻",
+        "통증/약": "💊",
+        "물": "💧",
+        "기타": "➕"
+      };
 
       Object.keys(currentTexts.menu).forEach(key => {
         const btn = document.createElement("button");
@@ -203,7 +216,7 @@
         btn.onclick = () => openSub(key);
 
         btn.innerHTML = `
-          <span class="icon">💠</span>
+          <span class="icon">${icons[key]}</span>
           <span class="text">${currentTexts.menu[key]}</span>
         `;
 
@@ -211,12 +224,13 @@
       });
     }
 
+    /* ---- 하위항목 렌더 ---- */
     function openSub(type) {
       const area = document.getElementById("subMenu");
       area.innerHTML = "";
       hideOther();
 
-      currentTexts.sub[type].forEach((item, i) => {
+      currentTexts.sub[type].forEach(item => {
         const btn = document.createElement("button");
         btn.className = "sub-button";
         btn.innerText = item;
@@ -229,8 +243,9 @@
       }
     }
 
+    /* ---- 요청 전송 ---- */
     function sendRequest(type, detail) {
-      const scriptURL = "YOUR_SCRIPT_URL_HERE";  // ← 여기에 스크립트 URL 넣기
+      const scriptURL = "YOUR_SCRIPT_URL_HERE";  // 여기에 실제 스크립트 URL 넣기
 
       fetch(`${scriptURL}?patientId=${patientId}&type=${type}&etc=${encodeURIComponent(detail)}`)
         .then(() => {
@@ -241,6 +256,7 @@
         .catch(err => console.error("전송 오류:", err));
     }
 
+    /* ---- 기타 입력 ---- */
     function showOther() {
       document.getElementById("otherInput").style.display = "inline-block";
       document.getElementById("submitOther").style.display = "inline-block";
@@ -257,10 +273,12 @@
     function submitOther() {
       const val = document.getElementById("otherInput").value.trim();
       if (!val) return alert(currentTexts.placeholder);
+
       sendRequest("기타", val);
       hideOther();
     }
 
+    /* ---- 언어 변경 ---- */
     function setLanguage() {
       currentLang = document.getElementById("lang").value;
       currentTexts = menuText[currentLang];
